--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="content/css/style.css">
-    <title>Document</title>
+    <script src="app/lib/angular.min.js"></script>
+    <script src="app/app.js"></script>
+    <title>Angular JS</title>
 </head>
 
-<body>
+<body ng-app="knightApp">
+    <header ng-include="'content/header.html'"></header>
+    <div class="content" ng-controller="KnightController">
+        <input type="text" ng-model="search">
+        <ul>
+            <li ng-repeat="person in persons | orderBy: '-money' | filter: search" ng-show="true">
+                {{person.name}} - {{person.money | currency: "JOD"}}
+                <div class="remove" ng-click="removePerson(person)">x</div>
+                <span>{{person.status}}</span>
+            </li>
+        </ul>
+        <form ng-submit="addNewPerson()">
+            <input type="text" placeholder="name" ng-model="newPerson.name">
+            <input type="text" placeholder="money" ng-model="newPerson.money">
+            <input type="text" placeholder="status" ng-model="newPerson.status">
+            <input type="submit" value="Add New Person">
+        </form>
+    </div>
 
 </body>
 
