--- a/content/header.html
+++ b/content/header.html
@@ -1,7 +1,7 @@
 <div id="menu-bar">
     <h1>Person Directory</h1>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">List Ninjas</a></li>
+        <li><a href="#!/home">Home</a></li>
+        <li><a href="#!/directory">List Persons</a></li>
     </ul>
 </div>
